# django-dirtyfields

./: pyproject.toml  tox.ini
tests/: models.py  test_third_party_conflicts.py
